# Python--Backend

./: README.md  database.db  main.py  pyproject.toml  requirements.txt
modules/cart/: controller_cart.py  model_cart.py  service_cart.py
modules/categories/: model_category.py  schema_category.py
modules/order/: controller_order.py  model_order.py  service_order.py
modules/product/: controller_product.py  model_product.py  schema_product.py  service_product.py
modules/user/: user_controller.py  user_model.py  user_service.py
modules/utils/: auth.py  database.py
modules/wishlist/: controller_wishlist.py  schema_wishlist.py  service_wishlist.py
